# cookiecutter

./: CHANGELOG.md  README.md  monkeypatch.py  shell.nix  test-config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature-request.md  question.md
.github/workflows/: main.yml
hooks/: post_gen_project.py
{{cookiecutter.folder_name}}/: Makefile  Nix.mk  Poetry.mk  README.md  default.nix  fastapi-mvc.ini  image.nix  pyproject.toml
{{cookiecutter.folder_name}}/.github/workflows/: docs.yml  integration.yml  main.yml  nix.yml
{{cookiecutter.folder_name}}/docs/: index.rst  install.rst  usage.rst
{{cookiecutter.folder_name}}/tests/unit/: test_wsgi.py
{{cookiecutter.folder_name}}/tests/unit/app/: test_asgi.py
{{cookiecutter.folder_name}}/tests/unit/app/exceptions/: test_http.py
{{cookiecutter.folder_name}}/tests/unit/app/utils/: test_redis.py
{{cookiecutter.folder_name}}/tests/unit/cli/: test_serve.py  test_utils.py
