[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"
readme = "README.md"
repository = "{{cookiecutter.repo_url}}"
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "~0.85.0"
uvicorn = {extras = ["standard"], version = "~0.18.3"}
gunicorn = "~20.1.0"
click = "~8.1.3"
{%- if cookiecutter.redis == "yes" %}
aioredis = "~2.0.1"
{%- endif %}
{%- if cookiecutter.aiohttp == "yes" %}
aiohttp = "~3.8.3"
{%- endif %}

[tool.poetry.dev-dependencies]
pytest = "~7.1.3"
pytest-cov = "~4.0.0"
pytest-asyncio = "~0.19.0"
requests = "~2.28.1"
{%- if cookiecutter.aiohttp == "yes" %}
aioresponses = "~0.7.3"
{%- endif %}
mock = "~4.0.3"
flake8 = "~5.0.4"
flake8-docstrings = "~1.6.0"
flake8-import-order = "~0.18.1"
flake8-todo = "^0.7"
black = "~22.8.0"
Sphinx = "~5.2.3"
Pallets-Sphinx-Themes = "~2.0.2"
myst-parser = "~0.18.1"

[tool.poetry.scripts]
{{cookiecutter.script_name}} = '{{cookiecutter.package_name}}.cli:cli'

[tool.poetry.urls]
"Issues" = "{{cookiecutter.repo_url}}/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
